- fix bug #61541, Segfault when using ob_* in output_callback